--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "signal.h": "c",
         "thread": "c",
-        "string.h": "c"
+        "string.h": "c",
+        "unistd.h": "c"
     }
 }
