--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "signal.h": "c",
         "thread": "c",
         "string.h": "c",
-        "unistd.h": "c"
+        "unistd.h": "c",
+        "util.h": "c"
     }
 }
